[package]
name = "find-cmdlet-web"
version = "0.1.1"
authors = ["Robert Clipsham <robert@octarineparrot.com>"]
edition = "2018"

[build-dependencies]
anyhow = "1.0.31"
ructe = "0.11.4"

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.1"
actix-files = "0.2.1"
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-web-prom = "0.2.0"
anyhow = "1.0.31"
clap = "2.33.1"
futures = "=0.3.4"
futures-util = "=0.3.4"
futures-macro = "=0.3.4"
hostname = "0.3.1"
lazy_static = "1.4.0"
listenfd = "0.3.3"
log = "0.4.8"
mime = "0.3.16"
openssl = { version = "0.10.30", features = ["v111"] }
pretty_env_logger = "0.4.0"
rand = "0.7.3"
ructe = "0.11.4"
serde = "1.0.114"
ssri = "5.0.0"
tantivy = "0.12.0"
toml = "0.5.6"

[dependencies.find-cmdlet-index]
path = "../find-cmdlet-index"

# Optimize dependencies in development
[profile.dev.package."*"]
opt-level = 3

# Produce debug info for dependencies in release
[profile.release.package."*"]
debug = true

# Produce debug info in release
[profile.release]
debug = true

[package.metadata.deb]
revision = "1"
maintainer-scripts = "pkg/debian"
assets = [
    ["target/release/find-cmdlet-web", "usr/bin/", "755"],
    ["pkg/find-cmdlet-web.socket", "lib/systemd/system/", "644"],
    ["pkg/find-cmdlet-web.service", "lib/systemd/system/", "644"],
    ["pkg/Config.toml", "etc/find-cmdlet-web/", "644"],
    ["static/*", "var/lib/find-cmdlet-web/webroot/static/", "644"],
    ["assets/*", "var/lib/find-cmdlet-web/webroot/assets/", "644"],
    ["typescript/*", "var/lib/find-cmdlet-web/webroot/typescript/", "644"],
    ["sass/*", "var/lib/find-cmdlet-web/webroot/sass/", "644"],
]