[package]
name = "find-cmdlet-indexer"
version = "0.1.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>"]
edition = "2018"
description = """
Build an index for find-cmdlet
"""

[dependencies]
anyhow = "1.0.31"
clap = "2.33.1"
comrak = "0.10.1"
log = "0.4.8"
pretty_env_logger = "0.4.0"
rayon = "1.3.0"
serde = "1.0"
serde_json = "1.0"
tantivy = "0.12.0"
walkdir = "2"
yaml-rust = "0.4.3"

[dependencies.find-cmdlet-index]
path = "../find-cmdlet-index"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 1
lto = true
codegen-units = 1